--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -45,7 +45,7 @@
         border-top-left-radius: @g4u-desktop-small-border-radius;
       }
 
-      .g4u-layerselector-collapsed {
+      &.g4u-layerselector-collapsed {
         .g4u-layerselector-titlebutton {
           .changeIconBefore(@g4u-layerselector-group-expanded-icon);
           border-bottom-right-radius: @g4u-desktop-small-border-radius;
