--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -10,6 +10,7 @@
     width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
     border-radius: @g4u-desktop-large-border-radius;
     background: @g4u-control-background;
+    overflow-y: auto;
 
     button {
       width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
