first transparency slider

--- a/less/maximizebutton.less
+++ b/less/maximizebutton.less
@@ -1,6 +1,6 @@
 @import "./lengths";
-@import "./controlgenerics";
 @import "./colors";
+@import "./buttons";
 
 @g4u-maximize-icon: url("../images/enlarge.svg");
 
