--- a/less/searchcontrol.less
+++ b/less/searchcontrol.less
@@ -1,5 +1,5 @@
 @import "./lengths";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./colors";
 
 @g4u-search-icon: url("../images/search.svg");
