--- a/less/closewindowbutton.less
+++ b/less/closewindowbutton.less
@@ -1,5 +1,5 @@
 @import "./lengths";
-@import "./controlgenerics";
+@import "./buttons";
 @import "./colors";
 
 @g4u-close-icon: url("../images/close.svg");
