--- a/less/slider.less
+++ b/less/slider.less
@@ -4,8 +4,8 @@
   -webkit-appearance: none; /* Override default CSS styles */
   appearance: none;
   width: 90%;
-  height: 4px;
-  background: #d3d3d3;
+  height: 2px;
+  background: @g4u-text-color;
   outline: none;
 }
 
