--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -116,6 +116,15 @@
         background: fade(@g4u-disabled-color, @g4u-not-so-opaque);
       }
 
+      &.g4u-layerselector-with-checkbox {
+        .g4u-layerselector-layerbutton {
+          .changeIconBefore(@g4u-checkbox-unchecked; @g4u-desktop-normal-fontsize);
+          &.g4u-layerselector-menu-active {
+            .changeIconBefore(@g4u-checkbox-checked; @g4u-desktop-normal-fontsize);
+          }
+        }
+      }
+
       .g4u-layerselector-layerbutton {
         .buttonWithIconBefore(@g4u-whitespace-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
         padding-top: @g4u-desktop-padding;
