added window button to accordionmenu

--- a/less/layerselectoraccordion.less
+++ b/less/layerselectoraccordion.less
@@ -47,11 +47,12 @@
         .g4u-accordion-line {
           height: @g4u-desktop-button-size;
           //padding: @g4u-desktop-padding;
-          padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
+          padding-left: @g4u-desktop-button-size;
 
-          .g4u-accordion-text {
+          .g4u-accordion-line-content {
             height: @g4u-desktop-button-size;
             display: inline-block;
+            padding-left: 2 * @g4u-desktop-padding;
             padding-top: @g4u-desktop-padding;
           }
         }
