--- a/less/layerselectoraccordion.less
+++ b/less/layerselectoraccordion.less
@@ -17,7 +17,7 @@
           }
         }
 
-        .accordion-size(10);
+        .accordion-size(20);
       }
 
       .g4u-accordion-button {
@@ -39,18 +39,25 @@
         .g4u-symbol-colors();
 
         &.g4u-layer-active {
-          .g4u-accordion-line {
+          .g4u-accordion-entry {
             background: @g4u-active-normal-button-color;
           }
         }
 
-        .g4u-accordion-line {
-          height: @g4u-desktop-button-size;
+        .g4u-accordion-entry {
           //padding: @g4u-desktop-padding;
           padding-left: @g4u-desktop-button-size;
 
-          .g4u-accordion-line-content {
-            height: @g4u-desktop-button-size;
+          .entry-size(@n, @i: 1) when (@i =< @n) {
+            .entry-size(@n, (@i + 1));
+            &.g4u-accordion-entry-size-@{i} {
+              height: (@g4u-desktop-button-size * (@i));
+            }
+          }
+
+          .entry-size(10);
+
+          .g4u-accordion-entry-content {
             display: inline-block;
             padding-left: 2 * @g4u-desktop-padding;
             padding-top: @g4u-desktop-padding;
