Reasonable LayerSelector structure

--- a/less/checkgroup.less
+++ b/less/checkgroup.less
@@ -9,6 +9,12 @@
 
 
 .g4u-check-group {
+  .g4u-check-group-title {
+    box-sizing: border-box;
+    height: @g4u-desktop-button-size;
+    padding: @g4u-desktop-padding;
+  }
+
   &.g4u-check-group-radio {
     button {
       .buttonWithIconBefore(@radio-unchecked; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
