--- a/less/window.less
+++ b/less/window.less
@@ -70,10 +70,7 @@
     }
 
     .g4u-window-content {
-      border-bottom-left-radius: @g4u-desktop-small-border-radius;
-      border-bottom-right-radius: @g4u-desktop-small-border-radius;
-      border-top-left-radius: @g4u-desktop-small-border-radius;
-      border-top-right-radius: @g4u-desktop-small-border-radius;
+      border-radius: @g4u-desktop-small-border-radius;
     }
 
     button.g4u-window-button-close {
