--- a/less/layermenu.less
+++ b/less/layermenu.less
@@ -15,9 +15,9 @@
     button {
       width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
 
-      &:focus {
-        .g4u-symbol-colors;
-      }
+      //&:focus {
+      //  .g4u-symbol-colors;
+      //}
     }
 
     .g4u-layermenu-item {
