--- a/less/legendviewer.less
+++ b/less/legendviewer.less
@@ -7,4 +7,7 @@
   margin: 0;
   border-radius: @g4u-desktop-large-border-radius;
   border: @g4u-desktop-border-width @g4u-medium-main-color solid;
+  img {
+    display: block;
+  }
 }
