--- a/less/print.less
+++ b/less/print.less
@@ -40,6 +40,7 @@
     .ol-control {
       background: @g4u-dark-main-color;
       padding: 2 * @g4u-tiny !important;
+      display: none;
 
       * {
         color: black !important;
